src/objects/DRE__DRE_Filter__c.object
<CustomObject>
    <customHelpPage>DRE__DREHelp</customHelpPage>
    <fields>
        <fullName>DRE__DRE_Group__c</fullName>
        <label>DRE Filter Group</label>
        <referenceTo>DRE__DRE_Filter_Group__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>DRE_Filters</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__DRE_Rule__c</fullName>
        <label>DRE Rule</label>
        <referenceTo>DRE__DRE_Rule__c</referenceTo>
        <relationshipLabel>Rule Filters</relationshipLabel>
        <relationshipName>DRE_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__Field__c</fullName>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DRE__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>CONTAINS</fullName>
                </value>
                <value>
                    <fullName>CONTAINS ANY</fullName>
                </value>
                <value>
                    <fullName>CHANGED</fullName>
                </value>
                <value>
                    <fullName>CHANGED TO</fullName>
                </value>
                <value>
                    <fullName>CHANGED TO ANY</fullName>
                </value>
                <value>
                    <fullName>NOT IN</fullName>
                </value>
                <value>
                    <fullName>NOT CONTAINS</fullName>
                </value>
                <value>
                    <fullName>NOT CHANGED</fullName>
                </value>
                <value>
                    <fullName>STARTS WITH</fullName>
                </value>
                <value>
                    <fullName>ENDS WITH</fullName>
                </value>
                <value>
                    <fullName>INCLUDES</fullName>
                </value>
                <value>
                    <fullName>NOT INCLUDES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DRE Filter</label>
    <nameField>
        <displayFormat>DREFLTR-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRE Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>